--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ The city is seeking damages for the money it has spent in fighting illnesses cau
             <br>
 
             <p>The human cost of addiction is incalculable. Families can be torn apart, relationships can be forever tarnished, personal dreams vanquished.
-              But across the nation, many state and local governments around the country<a href="https://www.nbcnews.com/news/us-news/justice-department-join-wave-state-lawsuits-against-opioid-makers-sessions-n851721"> are taking legal action</a>  over the economic
+              But many state and local governments around the country<a href="https://www.nbcnews.com/news/us-news/justice-department-join-wave-state-lawsuits-against-opioid-makers-sessions-n851721"> are taking legal action</a>  over the economic
               consequences of addiction as healthcare systems and social safety nets feel the strain of addressing the opioid epidemic.</p>
             <br>
 
